--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=10">
         <title>Open Weather Sample</title>
 
-        <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
+        <!-- <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
         <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-        <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
+        <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script> -->
 
         <script src="js/jQuery/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
