Start migration to ES5 - Non working yet

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <script src="js/jQuery/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 
+        <script src="js/init.js"></script>
+
         <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/init.css" rel="stylesheet" type="text/css">
     </head>
@@ -66,10 +68,6 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            System.import("js/init.js");
-        </script>
 
         <template id="city-result-tpl">
             <div class="col-md-12 col-sm-6">
