--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=10">
         <title>Open Weather Sample</title>
 
-        <!-- <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
-        <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-        <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script> -->
-
         <script src="js/jQuery/jquery-3.2.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 
-        <script src="js/init.js"></script>
+        <script src="js/template.js"></script>
+        <script src="js/geographics.js"></script>
+        <script src="js/weather.js"></script>
 
         <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="css/init.css" rel="stylesheet" type="text/css">
@@ -113,7 +111,7 @@
             <div class="panel panel-default text-center" id="cityResult">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 id="cityName">${Name}</h2>
+                        <h2 id="cityName">${City}</h2>
                         <h5 id="countryName">(${Country})</h5>
                     </div>
                 </div>
@@ -148,5 +146,8 @@
                 <strong>Error!</strong>
             </div>
         </template>
+
+        <script src="js/elements.js"></script>
+        <script src="js/init.js"></script>
     </body>
 </html>
